# utils

./: CMakeLists.txt  README.md  cbuild.sh  ctest.sh  utilsConfigure.h.in
docs/: config.py
inc/: utils.h
inc/utils/: b64_code.h  base64.h  crc16-ccitt-table.h  cycle_array.h  json_compress.h  url_code.h
priv/: base.h
src/: base64.c  cycle_array.c  json_compress.c  url_code.c  utils.c
test/: CMakeLists.txt  ctest.sh  main.c  test_timer.c
